# onyx_chunklet

./: CLAUDE.md  Cargo.toml
src/: allocator.rs  bitmap.rs  chunklet.rs  error.rs  lib.rs  pd.rs  pool.rs  superblock.rs  types.rs
src/io/: aligned.rs  mod.rs  raw.rs
src/ld/: descriptor.rs  mod.rs  plain.rs
tests/: crash_recovery.rs  ld_plain.rs
